--- a/content/styles.css
+++ b/content/styles.css
@@ -9,3 +9,10 @@
 .rejected {
     background-color: #ff8c8c;
 }
+
+.base-button{
+    position:relative;
+    top:50%; 
+    left:40%;
+    margin-left: 1%;
+}
